--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,53 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: "Rubik", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #2e384d;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 300;
+}
+
+form {
+  /* TODO: extract to a class or something */
+  width: 320px;
+}
+
+label {
+  text-transform: uppercase;
+  font-size: 12px;
+  color: #b0bac9;
+  font-weight: 500;
+}
+
+button,
+input {
+  padding: calc((40px - 15px) / 2) 16px;
+  border-radius: 5px;
+  width: 100%;
+}
+
+button {
+  border: 0;
+  /* TODO: use Sass or CSS variables to reduce color duplication */
+  background: rgb(46, 91, 255);
+  color: white;
+  font-weight: 500;
+}
+
+input {
+  border: 1px solid #e0e7ff;
+  background: #e0e7ff33;
 }
