--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+.App {
+  background: #e0e7ff33;
+  height: 100%;
+}
+
+.App__login {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: white;
+  width: 500px;
+}
+
 .App__header {
   height: 80px;
   background: white;
@@ -20,7 +34,7 @@
 }
 
 .App__body {
-  max-width: 800px;
+  flex-basis: 800px;
+  padding: 20px;
   margin: 0 auto;
-  padding: 0 10px;
 }
