--- a/src/index.css
+++ b/src/index.css
@@ -20,11 +20,6 @@ h6 {
   font-weight: 300;
 }
 
-form {
-  /* TODO: extract to a class or something */
-  width: 320px;
-}
-
 label {
   text-transform: uppercase;
   font-size: 12px;
@@ -50,4 +45,29 @@ button {
 input {
   border: 1px solid #e0e7ff;
   background: #e0e7ff33;
+}
+
+a:any-link {
+  text-decoration: none;
+  color: rgb(46, 91, 255);
+}
+
+small {
+  /* TODO: consider extracting to a class */
+  color: #b0bac9;
+}
+
+/* Other styles */
+
+.card {
+  background: white;
+  padding: 32px 24px;
+  box-shadow: 0 10px 20px #2e5bff24;
+}
+
+.nav-link {
+  display: block;
+  padding: 18px 16px;
+  background: white;
+  min-width: 200px;
 }
